<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pizzashop"
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/pizza_shop"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="118dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/it_s_a_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzashop"
        app:srcCompat="@drawable/pizza" />

    <TextView
        android:id="@+id/choosePizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:text="@string/choose_your_pizza"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosePizza">

        <RadioButton
            android:id="@+id/radioButtonSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/small_5euro"
            android:textColorLink="@android:color/holo_green_light"
            android:textSize="12sp"
            android:buttonTint="@color/colorRadioButton"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="250dp" />

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium_7euro"
            android:textSize="12sp"
            android:buttonTint="@color/colorRadioButton"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="250dp" />

        <RadioButton
            android:id="@+id/radioButtonLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/large_7euro"
            android:textSize="12sp"
            android:buttonTint="@color/colorRadioButton"
            tools:layout_editor_absoluteX="259dp"
            tools:layout_editor_absoluteY="250dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/toppings"
        android:layout_width="179dp"
        android:layout_height="33dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/choose_your_toppings"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosePizza" />

    <CheckBox
        android:id="@+id/checkBoxOnions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/onions"
        android:buttonTint="@color/colorCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppings" />

    <CheckBox
        android:id="@+id/checkBoxOlives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:checked="false"
        android:text="@string/olives"
        android:textColorLink="@android:color/holo_green_light"
        android:buttonTint="@color/colorCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAnsjovis" />

    <CheckBox
        android:id="@+id/checkBoxAnsjovis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ansjovis"
        android:buttonTint="@color/colorCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxOnions" />

    <Button
        android:id="@+id/orderbutton"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="108dp"
        android:layout_marginStart="108dp"
        android:background="#82c202"
        android:onClick="onPlaceOrderButtonClicked"
        android:text="@string/place_your_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="148dp"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="116dp"
        android:layout_marginStart="116dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>